<resources>
    <string name="app_name">English / Macedonian Dictionary</string>
    <string name="tag_your_query">Enter </string>
    <string name="save">Add new translation to dictionary</string>
    <string name="clear_tags">Clear Tags</string>
    <string name="translations_text">Translations</string>
    <string name="confirm">Confirm</string>
    <string name="dismiss">Dismiss</string>
    <string name="enter_tag">Enter Translation</string>
    <string name="edit">Edit</string>
    <string name="edit_tag_text">Edit Tag Text</string>
    <string name="search_hint">Enter search query here</string>
    <string name="add_word">Add Word</string>
    <string name="english_lang">English</string>
    <string name="macedonian_lang">Macedonian</string>
</resources>