<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitiy.MainActivity">

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/background_border"
        android:iconifiedByDefault="false"
        android:queryHint="Enter Twitter search query here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="150dp"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_tag_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tag_your_query"
            android:inputType="text"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/button_background"
        android:text="@string/save"
        android:textAllCaps="false"
        android:onClick="onSaveButton"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="530dp"
        android:layout_marginTop="32dp"
        android:background="@color/orange"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/button">

        <LinearLayout
            android:id="@+id/scrollLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tagged_searches"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold" />


            <!--            <LinearLayout-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="70dp"-->
            <!--                android:layout_marginTop="40dp"-->
            <!--                android:orientation="horizontal">-->

            <!--                <Button-->
            <!--                    android:id="@+id/button3"-->
            <!--                    android:layout_width="220dp"-->
            <!--                    android:layout_height="match_parent"-->
            <!--                    android:layout_marginStart="20dp"-->
            <!--                    android:backgroundTint="@color/button_background"-->
            <!--                    android:text="Random Tag"-->
            <!--                    android:textAllCaps="false"-->
            <!--                    android:textColor="@color/black" />-->

            <!--                <Button-->
            <!--                    android:id="@+id/button4"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="match_parent"-->
            <!--                    android:layout_marginStart="10dp"-->
            <!--                    android:layout_marginEnd="20dp"-->
            <!--                    android:backgroundTint="@color/button_background"-->
            <!--                    android:text="Edit"-->
            <!--                    android:textAllCaps="false"-->
            <!--                    android:textColor="@color/black" />-->
            <!--            </LinearLayout>-->
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/button_background"
        android:text="@string/clear_tags"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:onClick="onClearTags"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/scrollView2"
        app:layout_constraintStart_toStartOf="@+id/scrollView2"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />



</androidx.constraintlayout.widget.ConstraintLayout>